@@ -7,7 +7,9 @@
 
 #ifdef BUILD_SDL
 #include "AudioProcessorSDL.h"
-#else
+#endif
+
+#ifdef BUILD_QT_MULTIMEDIA
 #include "AudioProcessorQt.h"
 #endif
 
@@ -17,12 +19,31 @@ extern "C" {
 
 using namespace QGBA;
 
-AudioProcessor* AudioProcessor::create() {
-#ifdef BUILD_SDL
-	return new AudioProcessorSDL();
+#ifdef BUILD_QT_MULTIMEDIA
+AudioProcessor::Driver AudioProcessor::s_driver = AudioProcessor::Driver::QT_MULTIMEDIA;
 #else
-	return new AudioProcessorQt();
-#endif	
+AudioProcessor::Driver AudioProcessor::s_driver = AudioProcessor::Driver::SDL;
+#endif
+
+AudioProcessor* AudioProcessor::create() {
+	switch (s_driver) {
+#ifdef BUILD_SDL
+	case Driver::SDL:
+		return new AudioProcessorSDL();
+#endif
+
+#ifdef BUILD_QT_MULTIMEDIA
+	case Driver::QT_MULTIMEDIA:
+		return new AudioProcessorQt();
+#endif
+
+	default:
+#ifdef BUILD_QT_MULTIMEDIA
+		return new AudioProcessorQt();
+#else
+		return new AudioProcessorSDL();
+#endif
+	}
 }
 
 AudioProcessor::AudioProcessor(QObject* parent)
