@@ -15,7 +15,18 @@ class AudioProcessor : public QObject {
 Q_OBJECT
 
 public:
+	enum class Driver {
+#ifdef BUILD_QT_MULTIMEDIA
+		QT_MULTIMEDIA = 0,
+#endif
+#ifdef BUILD_SDL
+		SDL = 1,
+#endif
+	};
+
 	static AudioProcessor* create();
+	static void setDriver(Driver driver) { s_driver = driver; }
+
 	AudioProcessor(QObject* parent = nullptr);
 
 	virtual void setInput(GBAThread* input);
@@ -34,6 +45,7 @@ protected:
 private:
 	GBAThread* m_context;
 	int m_samples;
+	static Driver s_driver;
 };
 
 }
