@@ -89,25 +89,12 @@
      </item>
      <item row="4" column="1">
       <widget class="QComboBox" name="audioDriver">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <item>
-        <property name="text">
-         <string>SDL</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Qt Multimedia</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item row="5" column="0">
